# serializer version: 1
# name: test_sensor[sensor.testsn_latest_reading-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.testsn_latest_reading',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Latest reading',
    'platform': 'anglian_water',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <AnglianWaterSensor.LATEST_READING: 'latest_reading'>,
    'unique_id': 'TESTSN_latest_reading',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_sensor[sensor.testsn_latest_reading-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'TESTSN Latest reading',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.testsn_latest_reading',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_sewerage_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.testsn_yesterday_s_sewerage_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': "Yesterday's sewerage cost",
    'platform': 'anglian_water',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <AnglianWaterSensor.YESTERDAY_SEWERAGE_COST: 'yesterday_sewerage_cost'>,
    'unique_id': 'TESTSN_yesterday_sewerage_cost',
    'unit_of_measurement': 'GBP',
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_sewerage_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': "TESTSN Yesterday's sewerage cost",
      'unit_of_measurement': 'GBP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.testsn_yesterday_s_sewerage_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.testsn_yesterday_s_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': "Yesterday's usage",
    'platform': 'anglian_water',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <AnglianWaterSensor.YESTERDAY_CONSUMPTION: 'yesterday_consumption'>,
    'unique_id': 'TESTSN_yesterday_consumption',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': "TESTSN Yesterday's usage",
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.testsn_yesterday_s_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_water_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.testsn_yesterday_s_water_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': "Yesterday's water cost",
    'platform': 'anglian_water',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <AnglianWaterSensor.YESTERDAY_WATER_COST: 'yesterday_water_cost'>,
    'unique_id': 'TESTSN_yesterday_water_cost',
    'unit_of_measurement': 'GBP',
  })
# ---
# name: test_sensor[sensor.testsn_yesterday_s_water_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': "TESTSN Yesterday's water cost",
      'unit_of_measurement': 'GBP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.testsn_yesterday_s_water_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
